replaced row-gap and column-gap on ViewCart components with margins and padding to fix responsive issues on iOS devices. removed height restriction on the Remove button's container and its parent container to try to fix an issue of the Remove button getting cut out off on my iPad.

--- a/src/App.css
+++ b/src/App.css
@@ -388,37 +388,43 @@ button:hover {
 
 .item-in-cart-container {
   display: flex;
-  height: 150px;
+  /* height: 150px; */
   align-items: center;
-  column-gap: 1rem;
+  /* column-gap: 1rem; */
 }
 
 .view-cart-details-container,
 .view-cart-edit-container {
   display: flex;
   flex-direction: column;
-  row-gap: 0.5rem;
+  /* row-gap: 0.5rem; */
 }
 
 .view-cart-details-container {
   height: 100%;
   width: 20rem;
   justify-content: center;
+  margin: 0 1rem;
 }
 
 .view-cart-edit-container {
-  height: 50%;
+  /* height: 50%; */
   width: 8rem;
+}
+
+.middle-spacing-helper {
+  padding: 0.5rem 0;
 }
 
 .remove-item {
   font-size: 1rem;
+  margin: 0;
 }
 
 #view-cart-total {
   display: flex;
   padding: 0 0.5rem;
-  column-gap: 2rem;
+  /* column-gap: 2rem; */
   justify-content: center;
   align-items: center;
 }
@@ -753,7 +759,7 @@ footer {
   .item-in-cart-container {
     height: auto;
     flex-direction: column;
-    row-gap: 1rem;
+    /* row-gap: 1rem; */
     margin-bottom: 1.5rem;
   }
 
@@ -765,6 +771,7 @@ footer {
 
   .view-cart-details-container {
     text-align: center;
+    margin: 1rem 0;
   }
 
   #cart-total-container {
